sR> added image to hello world

--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
+<html>
 <h1>Hello World!</h1>
-<tbody>This is for my 2020 MIT Cloud and DevOps Course</tbody>
+<img src="my-pic.png" height="150">
+</html>
