sR> just a little nice looking

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
-<h1>Hello World!</h1>
-<img src="my-pic.png" height="150">
+    <h1>Hello World!</h1>
+    <br>
+    <img src="my-pic.png" height="150">
+    <br><br>
+    <b>The "<a href="https://github.com/securityRelic">SecurityRelic</a>"</b>
+    <br><br>
+    MIT Cloud & DevOps: Continuous Transformation - November 2020
 </html>
