--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
     <img src="my-pic.png" height="150">
     <br><br>
-    <b>"<a href="https://github.com/securityRelic">SecurityRelic</a>"</b>
+    <b><a href="https://github.com/securityRelic">SecurityRelic</a></b>
  </html>
