sr: added coptix-py project link

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
     <img src="my-pic.png" height="150">
     <br><br>
-    <b><a href="https://github.com/securityRelic">SecurityRelic</a></b>
+    <h1>securityRelic</h1>
+    <b><a href="https://github.com/securityRelic">GitHub Repositories</a></b>
+    <br><br>
+    <h2>Pet Projects</h2>
+    <li><<b><a href="https://github.com/securityRelic/coptix-py">Sophos Cloud Optix Automation with Python</a></b>/li>
  </html>
