--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
     <img src="my-pic.png" height="150">
     <br><br>
     <h1>securityRelic</h1>
-    <b><a href="https://github.com/securityRelic">GitHub Repositories</a></b>
+    <b><a href="https://github.com/securityRelic">GitHub</a></b>
     <br><br>
     <h2>Pet Projects</h2>
-    <li><<b><a href="https://github.com/securityRelic/coptix-py">Sophos Cloud Optix Automation with Python</a></b>/li>
+    <h3><a href="https://github.com/securityRelic/coptix-py">Sophos Cloud Optix Automation with Python</a></b></h3>
+    <textarea>Notes and and code guidance for automating the use of the Sophos Cloud Optix REST API</textarea>
  </html>
