--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <html>
-    <img src="my-pic.png" height="150">
-    <br><br>
-    <h1>securityRelic</h1>
-    <b><a href="https://github.com/securityRelic">GitHub</a></b>
-    <br><br>
-    <h2>Pet Projects</h2>
-    <h3><a href="https://github.com/securityRelic/coptix-py">Sophos Cloud Optix Automation with Python</a></b></h3>
-    <textarea>Notes and and code guidance for automating the use of the Sophos Cloud Optix REST API</textarea>
+    <head>
+        <style>
+            body {background-color:black;}
+
+            h1 {
+            color: white;
+            text-align: center;
+            }
+
+            p {
+            color: white;
+            font-family: verdana;
+            font-size: 20px;
+            }    
+        </style>
+    </head>
+        <img src="my-pic.png" height="150">
+        <br><br>
+        <h1>securityRelic</h1>
+        <b><a href="https://github.com/securityRelic">GitHub</a></b>
+        <br><br>
+        <h2>Pet Projects</h2>
+        <article>
+        <h3><a href="https://github.com/securityRelic/coptix-py">Sophos Cloud Optix Automation with Python</a></b></h3>
+        Notes and and code guidance for automating the use of the Sophos Cloud Optix REST API
+        </article>
+
  </html>
