sr: css tinkering

--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
 <html>
     <head>
         <style>
-            body {background-color:black;}
-
-            h1 {
-            color: white;
-            text-align: center;
+            body {
+                background-color:#30363e;
             }
-
+            h1 {
+                color: white;
+                text-align: left;
+                font-family: verdana;
+                font-size: 36px;
+            }
+            article {
+                color: white;
+                text-align: left;
+                font-family: verdana;
+                font-size: 20px;
+            }
             p {
-            color: white;
-            font-family: verdana;
-            font-size: 20px;
+                color: white;
+                font-family: verdana;
+                font-size: 20px;
             }    
         </style>
     </head>
-        <img src="my-pic.png" height="150">
         <br><br>
         <h1>securityRelic</h1>
         <b><a href="https://github.com/securityRelic">GitHub</a></b>
@@ -25,5 +32,6 @@
         <h3><a href="https://github.com/securityRelic/coptix-py">Sophos Cloud Optix Automation with Python</a></b></h3>
         Notes and and code guidance for automating the use of the Sophos Cloud Optix REST API
         </article>
+        <img src="my-pic.png" height="150">
 
  </html>
