--- a/index.html
+++ b/index.html
@@ -7,18 +7,25 @@
             h1 {
                 color: white;
                 text-align: left;
-                font-family: verdana;
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
                 font-size: 36px;
             }
             article {
                 color: white;
                 text-align: left;
-                font-family: verdana;
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
                 font-size: 20px;
+            }
+            a {
+                color: #388bfd;
+                text-align: left;
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+                font-size: 20px;
+
             }
             p {
                 color: white;
-                font-family: verdana;
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
                 font-size: 20px;
             }    
         </style>
