sr: initial layout set?

--- a/index.html
+++ b/index.html
@@ -2,43 +2,111 @@
     <head>
         <style>
             body {
+                background-color:#161b22;
+            }
+            section {
                 background-color:#30363e;
             }
             h1 {
-                color: white;
+                color:#f9c513;
                 text-align: left;
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
                 font-size: 36px;
+                scroll-margin-left: 40px;
+                border-width: 2px;
+                border-radius: 25px;
+                border-color: #f9c513;
+                width: 90%;
+                border-style: solid;
+                padding: 10px;
+                margin-left: 20px; 
+            }
+            h2 {
+                color: #f9c513;
+                text-align: left;
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+                font-size: 24px;
+                scroll-margin-left: 40px;
+                border-width: 2px;
+                border-radius: 25px;
+                border-color: #f9c513;
+                width: 90%;
+                border-style: solid;
+                padding: 10px;
+                margin-left: 40px;
+            }
+            h3 {
+                color: #f9c513;
+                text-align: left;
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+                font-size: 24px;
+                margin-left: 60px;
+            }
+            h4 {
+                color: white;
+                text-align: left;
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+                font-size: 24px;
+                margin-left: 80px;
             }
             article {
                 color: white;
                 text-align: left;
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
-                font-size: 20px;
+                font-size: 18px;
+                margin-left: 50px;
             }
             a {
                 color: #388bfd;
                 text-align: left;
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
-                font-size: 20px;
+                font-size: 18px;
 
             }
             p {
                 color: white;
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
                 font-size: 20px;
-            }    
+            }
         </style>
     </head>
-        <br><br>
-        <h1>securityRelic</h1>
-        <b><a href="https://github.com/securityRelic">GitHub</a></b>
-        <br><br>
-        <h2>Pet Projects</h2>
+        <title>securityRelic</title>
+        <section>
+            <br>
+            <h1>securityRelic@localhost:~$</h1>
+            <br>
+        </section>
+        <h2>securityRelic@localhost:~/pet-projects</h2>
+        <h3>securityRelic@localhost:~/pet-projects/coptix-py</h3>
+        <h4>Sophos Cloud Optix Automation with Python</h4>
         <article>
-        <h3><a href="https://github.com/securityRelic/coptix-py">Sophos Cloud Optix Automation with Python</a></b></h3>
-        Notes and and code guidance for automating the use of the Sophos Cloud Optix REST API
+        <table>
+            <tr>
+                <th><img src="https://github.githubassets.com/images/modules/logos_page/Octocat.png" height="50"></th>
+                <th>
+                    <article>
+                        <a href=https://github.com/securityRelic/coptix-py>https://github.com/securityRelic/coptix-py</a> <br>
+                        General usaged, notes and sample code for Sophos Cloud Optix REST API automation.
+                    </article>
+                </th>
+            </tr>
+        </table>
         </article>
-        <img src="my-pic.png" height="150">
-
+        <h2>securityRelic@localhost:~/archive</h2>
+        <br>
+        <br>
+        <hr>
+        <article>
+        <table>
+            <tr>
+                <th><img src="my-pic.png" height="150"></th>
+                <th></th>
+                <th></th>
+                <th><a href="https://www.linkedin.com/in/jmwirth"><img src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg" height="75"></a></th>
+                <th></th>
+                <th></th>
+                <th><a href="https://github.com/securityRelic"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" height="75"></a></th>
+            </tr>
+        </table>
+        </article>
  </html>
