--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <th>
                     <article>
                         <a href=https://github.com/securityRelic/coptix-py>https://github.com/securityRelic/coptix-py</a> <br>
-                        General usaged, notes and sample code for Sophos Cloud Optix REST API automation.
+                        General usage, notes and sample code for Sophos Cloud Optix REST API automation.
                     </article>
                 </th>
             </tr>
