sr: initial layout set?

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             <h1>securityRelic@localhost:~$</h1>
             <br>
         </section>
-        <h2>securityRelic@localhost:~/pet-projects</h2>
-        <h3>securityRelic@localhost:~/pet-projects/coptix-py</h3>
+        <h2>securityRelic@localhost:~/pet-projects$</h2>
+        <h3>securityRelic@localhost:~/pet-projects/coptix-py$</h3>
         <h4>Sophos Cloud Optix Automation with Python</h4>
         <article>
         <table>
@@ -92,7 +92,7 @@
             </tr>
         </table>
         </article>
-        <h2>securityRelic@localhost:~/archive</h2>
+        <h2>securityRelic@localhost:~/archive$</h2>
         <br>
         <br>
         <hr>
