sr: new clean look

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <article>
         <table>
             <tr>
-                <th><img src="https://github.githubassets.com/images/modules/logos_page/Octocat.png" height="50"></th>
+                <th><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" height="50"></th>
                 <th>
                     <article>
                         <a href=https://github.com/securityRelic/coptix-py>https://github.com/securityRelic/coptix-py</a> <br>
@@ -92,20 +92,20 @@
             </tr>
         </table>
         </article>
-        <h2>securityRelic@localhost:~/archive$</h2>
+        <h2>securityRelic@localhost:~/archives$</h2>
         <br>
         <br>
         <hr>
         <article>
         <table>
             <tr>
-                <th><img src="my-pic.png" height="150"></th>
+                <th><img src="my-pic.png" height="100"></th>
                 <th></th>
                 <th></th>
-                <th><a href="https://www.linkedin.com/in/jmwirth"><img src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg" height="75"></a></th>
+                <th><a href="https://www.linkedin.com/in/jmwirth"><img src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg" height="50"></a></th>
                 <th></th>
                 <th></th>
-                <th><a href="https://github.com/securityRelic"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" height="75"></a></th>
+                <th><a href="https://github.com/securityRelic"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" height="50"></a></th>
             </tr>
         </table>
         </article>
