sr: finalized template and completed clean-up

--- a/index.html
+++ b/index.html
@@ -2,71 +2,65 @@
     <head>
         <style>
             body {
-                background-color:#161b22;
+                background-color:#0d1117;
             }
             section {
                 background-color:#30363e;
             }
             h1 {
-                color:#f9c513;
+                color:#f2cc60;
                 text-align: left;
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
                 font-size: 36px;
                 scroll-margin-left: 40px;
                 border-width: 2px;
                 border-radius: 25px;
-                border-color: #f9c513;
+                border-color: #f2cc60;
                 width: 90%;
                 border-style: solid;
                 padding: 10px;
                 margin-left: 20px; 
             }
             h2 {
-                color: #f9c513;
+                color:#f2cc60;
                 text-align: left;
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
                 font-size: 24px;
                 scroll-margin-left: 40px;
                 border-width: 2px;
                 border-radius: 25px;
-                border-color: #f9c513;
+                border-color:#f2cc60;
                 width: 90%;
                 border-style: solid;
                 padding: 10px;
                 margin-left: 40px;
             }
             h3 {
-                color: #f9c513;
+                color:#f2cc60;
                 text-align: left;
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
                 font-size: 24px;
                 margin-left: 60px;
             }
             h4 {
-                color: white;
+                color:#f0f6fc;
                 text-align: left;
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
                 font-size: 24px;
                 margin-left: 80px;
             }
             article {
-                color: white;
+                color:#f0f6fc;
                 text-align: left;
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
                 font-size: 18px;
                 margin-left: 50px;
             }
             a {
-                color: #388bfd;
+                color:#1158c7;
                 text-align: left;
                 font-family: Verdana, Geneva, Tahoma, sans-serif;
                 font-size: 18px;
-
-            }
-            p {
-                color: white;
-                font-family: Verdana, Geneva, Tahoma, sans-serif;
-                font-size: 20px;
             }
         </style>
     </head>
@@ -79,20 +73,49 @@
         <h2>securityRelic@localhost:~/pet-projects$</h2>
         <h3>securityRelic@localhost:~/pet-projects/coptix-py$</h3>
         <h4>Sophos Cloud Optix Automation with Python</h4>
-        <article>
         <table>
             <tr>
-                <th><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" height="50"></th>
-                <th>
-                    <article>
-                        <a href=https://github.com/securityRelic/coptix-py>https://github.com/securityRelic/coptix-py</a> <br>
-                        General usage, notes and sample code for Sophos Cloud Optix REST API automation.
-                    </article>
-                </th>
+                <th rowspan="3"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1200px-Python-logo-notext.svg.png" height="50" width="50"></th>
+                <th><article><a href=https://github.com/securityRelic/coptix-py>https://github.com/securityRelic/coptix-py</a></article></th>
+            </tr>
+            <tr>
+                <td><article>Status: Active</article></td>
+            </tr>
+            <tr>
+                <td><article>General API endpoint usage notes and sample code for Sophos Cloud Optix REST API automation.</article></td>
             </tr>
         </table>
-        </article>
         <h2>securityRelic@localhost:~/archives$</h2>
+        <h3>securityRelic@localhost:~/archives/vcodeHMAC$</h3>
+        <h4>Veracode HMAC Authorization Package</h4>
+        <table>
+            <tr>
+                <th rowspan="3"><img src="https://golang.org/lib/godoc/images/go-logo-blue.svg" height="50" width="50"></th>
+                <th><article>[fork] <a href=https://github.com/securityRelic/vcodeHMAC>https://github.com/securityRelic/vcodeHMAC</a></article></th>
+            </tr>
+            <tr>
+                <td><article>Status: Last Update September 2019</article></td>
+            </tr>
+            <tr>
+                <td><article>Added a quick hack back in 2019 to leveraging environment variables (vs. local storage) and faciliate running in a targeted automated pipeline. Found <a href=https://github.com/brian1917/vcodeHMAC>brian1917/vcodeHMAC</a> codebase easy to work with and functionality provided solid, but utimately moved in another direction. Keeping this for historical purposes.</article></td>
+            </tr>
+        </table>
+
+        <h3>securityRelic@localhost:~/archives/vcodeapi$</h3>
+        <h4>Veracode API Package</h4>
+        <table>
+            <tr>
+                <th rowspan="3"><img src="https://golang.org/lib/godoc/images/go-logo-blue.svg" height="50" width="50"></th>
+                <th><article>[fork] <a href=https://github.com/securityRelic/vcodeapi>https://github.com/securityRelic/vcodeapi</a></article></th>
+            </tr>
+            <tr>
+                <td><article>Status: Last Update September 2019</article></td>
+            </tr>
+            <tr>
+                <td><article>Added a quick hack back in 2019 to use Veracode sandboxes and retrieve detailed flaw report (pdf) in a targeted automated pipeline. Found <a href=https://github.com/brian1917/vcodeapi>brian1917/vcodeapi</a> codebase easy to work with and functionality provided solid, but utimately moved in another direction. Keeping this for historical purposes.</article></td>
+            </tr>
+        </table>
+
         <br>
         <br>
         <hr>
