--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h4>Sophos Cloud Optix Automation with Python</h4>
         <table>
             <tr>
-                <th rowspan="3"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1200px-Python-logo-notext.svg.png" height="50" width="50"></th>
+                <th rowspan="3"></th>
                 <th><article><a href=https://github.com/securityRelic/coptix-py>https://github.com/securityRelic/coptix-py</a></article></th>
             </tr>
             <tr>
@@ -90,7 +90,7 @@
         <h4>Veracode HMAC Authorization Package</h4>
         <table>
             <tr>
-                <th rowspan="3"><img src="https://golang.org/lib/godoc/images/go-logo-blue.svg" height="50" width="50"></th>
+                <th rowspan="3"></th>
                 <th><article>[fork] <a href=https://github.com/securityRelic/vcodeHMAC>https://github.com/securityRelic/vcodeHMAC</a></article></th>
             </tr>
             <tr>
@@ -105,7 +105,7 @@
         <h4>Veracode API Package</h4>
         <table>
             <tr>
-                <th rowspan="3"><img src="https://golang.org/lib/godoc/images/go-logo-blue.svg" height="50" width="50"></th>
+                <th rowspan="3"></th>
                 <th><article>[fork] <a href=https://github.com/securityRelic/vcodeapi>https://github.com/securityRelic/vcodeapi</a></article></th>
             </tr>
             <tr>
@@ -125,7 +125,7 @@
                 <th><img src="my-pic.png" height="100"></th>
                 <th></th>
                 <th></th>
-                <th><a href="https://www.linkedin.com/in/jmwirth"><img src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg" height="50"></a></th>
+                <th></th>
                 <th></th>
                 <th></th>
                 <th><a href="https://github.com/securityRelic"><img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" height="50"></a></th>
